--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -74,10 +74,7 @@
                                 <% } %>
                             </td>
                             <td>
-                                <form action="/complaint/resolve/<%= complaint._id %>" method="post">
-
                                     <button type="submit" onclick="updateComplaintStatus('<%= complaint._id %>')">Mark as Resolved</button>
-                                </form>
                             </td>
                         </tr>
                         <% }%> 
@@ -125,6 +122,26 @@
             }
             
         });
+
+
+       async function updateComplaintStatus(id){
+            try{
+                let res = await fetch('/complaint/resolved', {
+                    method: 'POST',
+                    body: JSON.stringify({id}),
+                    headers: {'Content-Type' : 'application/json'},
+                });
+
+                let data = await res.json();
+                let {M, E} = data;
+
+                if(M) location.reload();
+                if(E) alert('err updating resolve status');
+            }
+            catch(err){
+                console.log(err);
+            }
+        }
 
         
 
